--- a/package.json
+++ b/package.json
@@ -48,6 +48,11 @@
       {
         "command": "xsdOutline.openSelection",
         "title": "%command.openSelection%"
+      },
+      {
+        "command": "xsdOutline.copyName",
+        "title": "%command.copyName%",
+        "icon": "$(copy)"
       }
     ],
     "configuration": {
@@ -68,6 +73,14 @@
           "when": "view == xsdOutline",
           "group": "navigation",
           "icon": "$(refresh)"
+        }
+      ],
+      "view/item/context": [
+        {
+          "command": "xsdOutline.copyName",
+          "when": "view == xsdOutline && xsdOutlineEnabled",
+          "group": "inline",
+          "args": ["${treeItem.label}"]
         }
       ]
     }
